; ModuleID = '/home/carl/AnghaBench/libgit2/tests/checkout/extr_index.c_test_checkout_notify_cb.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/checkout/extr_index.c_test_checkout_notify_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }
%struct.notify_data = type { i32, i32 }

@GIT_CHECKOUT_NOTIFY_CONFLICT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*, %struct.TYPE_6__*, %struct.TYPE_6__*, %struct.TYPE_6__*, i8*)* @test_checkout_notify_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @test_checkout_notify_cb(i32 %0, i8* %1, %struct.TYPE_6__* %2, %struct.TYPE_6__* %3, %struct.TYPE_6__* %4, i8* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca %struct.TYPE_6__*, align 8
  %10 = alloca %struct.TYPE_6__*, align 8
  %11 = alloca %struct.TYPE_6__*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca %struct.notify_data*, align 8
  store i32 %0, i32* %7, align 4
  store i8* %1, i8** %8, align 8
  store %struct.TYPE_6__* %2, %struct.TYPE_6__** %9, align 8
  store %struct.TYPE_6__* %3, %struct.TYPE_6__** %10, align 8
  store %struct.TYPE_6__* %4, %struct.TYPE_6__** %11, align 8
  store i8* %5, i8** %12, align 8
  %14 = load i8*, i8** %12, align 8
  %15 = bitcast i8* %14 to %struct.notify_data*
  store %struct.notify_data* %15, %struct.notify_data** %13, align 8
  %16 = load %struct.TYPE_6__*, %struct.TYPE_6__** %11, align 8
  %17 = call i32 @GIT_UNUSED(%struct.TYPE_6__* %16)
  %18 = load i32, i32* @GIT_CHECKOUT_NOTIFY_CONFLICT, align 4
  %19 = load i32, i32* %7, align 4
  %20 = call i32 @cl_assert_equal_i(i32 %18, i32 %19)
  %21 = load %struct.notify_data*, %struct.notify_data** %13, align 8
  %22 = getelementptr inbounds %struct.notify_data, %struct.notify_data* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 4
  %24 = load i8*, i8** %8, align 8
  %25 = call i32 @cl_assert_equal_s(i32 %23, i8* %24)
  %26 = load %struct.TYPE_6__*, %struct.TYPE_6__** %9, align 8
  %27 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %26, i32 0, i32 0
  %28 = load %struct.notify_data*, %struct.notify_data** %13, align 8
  %29 = getelementptr inbounds %struct.notify_data, %struct.notify_data* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = call i32 @git_oid_streq(i32* %27, i32 %30)
  %32 = call i32 @cl_assert_equal_i(i32 0, i32 %31)
  %33 = load %struct.TYPE_6__*, %struct.TYPE_6__** %10, align 8
  %34 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %33, i32 0, i32 0
  %35 = load %struct.notify_data*, %struct.notify_data** %13, align 8
  %36 = getelementptr inbounds %struct.notify_data, %struct.notify_data* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  %38 = call i32 @git_oid_streq(i32* %34, i32 %37)
  %39 = call i32 @cl_assert_equal_i(i32 0, i32 %38)
  ret i32 0
}

declare dso_local i32 @GIT_UNUSED(%struct.TYPE_6__*) #1

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1

declare dso_local i32 @cl_assert_equal_s(i32, i8*) #1

declare dso_local i32 @git_oid_streq(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
